--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>SunrinVoca</title>
-    <!-- GA -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZT1E6GGNPY"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146519892-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-ZT1E6GGNPY');
+      gtag('config', 'UA-146519892-1');
     </script>
   </head>
   <body>
